# canpal

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  config.py  pyproject.toml
backend/app/: deps.py  main.py
backend/app/models/: canvas.py
backend/app/services/: canvas_agent.py  connection_manager.py  higgsfield_image.py  proactive_organizer.py  voice_agent.py
deploy/: Dockerfile.web  nginx.conf  nginx.ssl.conf
frontend/: index.html  package-lock.json  package.json  vite.config.ts  wrangler.toml
frontend/.tsbuild/: tsconfig.tsbuildinfo
frontend/.wrangler/state/v3/cache/miniflare-CacheObject/: metadata.sqlite-shm  (+1 more)
frontend/client/: App.tsx  bootstrapCrypto.ts  index.css  main.tsx
frontend/client/actions/: GenerateImageActionUtil.ts
frontend/client/agent/: TldrawAgent.ts
frontend/client/canvas-ws/: CanvasWsSync.tsx  WebSpeechLiveButton.tsx  canvasProfile.ts  canvasWsBridge.ts  collabShapeWire.ts  wireGeoUpsert.ts
frontend/client/components/: ChatInput.tsx  CustomHelperButtons.tsx  VoiceInputButton.tsx
frontend/client/lib/: randomUuid.ts
frontend/client/modes/: AgentModeDefinitions.ts
frontend/shared/: backendAuth.ts  models.ts  voiceTranscribe.ts
frontend/shared/schema/: AgentActionSchemas.ts
frontend/worker/: environment.ts  worker.ts
frontend/worker/do/: AgentService.ts
frontend/worker/prompt/sections/: rules-section.ts
stream-server/: Dockerfile  package-lock.json  package.json  server.ts  tsconfig.docker.json  tsconfig.json
(+2 files in other folders)
